--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
 steps:
   - name: gcr.io/cloud-builders/git
-    args: ["fetch", "--unshallow"]
+    args: ["fetch", "--unshallow", "--network=cloudbuild"]
 timeout: "1600s"
