--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,5 @@
 steps:
   - name: gcr.io/cloud-builders/git
     entrypoint: /bin/bash
-    args:
-      [
-        "-c",
-        "echo -n ${BRANCH_NAME}:${SHORT_SHA}:$(git rev-list --count ${SHORT_SHA}):$(git describe --tags --exact-match 2> /dev/null) > app/VERSION_TAG",
-      ]
+    args: ["-c", "ls -ls"]
 timeout: "1600s"
