--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
   - name: gcr.io/cloud-builders/git
     entrypoint: /bin/bash
-    args: ["-c", "ls -ls"]
+    args: ["-c", "export"]
 timeout: "1600s"
