--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
   - name: gcr.io/cloud-builders/git
     entrypoint: /bin/bash
-    args: ["-c", "echo -n ${BRANCH_NAME}:${SHORT_SHA}:${SHORT_SHA}\\n ; ls"]
+    args: ["-c", "git rev-list --count ${SHORT_SHA}"]
 timeout: "1600s"
