--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,8 @@
 steps:
   - name: gcr.io/cloud-builders/git
+    args: ["fetch", "--unshallow"]
+
+  - name: gcr.io/cloud-builders/git
     entrypoint: /bin/bash
     args: ["-c", "ls -la"]
 
